# COVID-19-Contact-Modeling

./: CMakeLists.txt  build.bat  build.sh
src/: Source.cpp
